--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
         </div>
       </div>
     </footer>
-    <script src=".index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
